# python-project-49

./: Makefile  Makefile.make  Makefile.mk  README.md  pyproject.toml
brain_games/: calc.py  cli.py  even.py  game_engine.py  gcd.py  prime.py  progression.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
