[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain-games - the package contains five simple mathematics quiz games"
authors = ["Kirill Babaev <babaevkv89@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development ::Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:welcome_user"
brain-even = "brain_games.scripts.brain_games:even_game"
brain-calc = "brain_games.scripts.brain_games:calc_game"
brain-gcd = "brain_games.scripts.brain_games:gcd_game"
brain-progression = "brain_games.scripts.brain_games:progression_game"
brain-prime = "brain_games.scripts.brain_games:prime.prime_game"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
