[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain-games - the package contains five simple mathematics quiz games"
authors = ["Kirill Babaev <babaevkv89@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development ::Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:welcome_user"
brain-even = "brain_games.scripts.brain_games:game_even"
brain-calc = "brain_games.scripts.brain_games:game_calc"
brain-gcd = "brain_games.scripts.brain_games:game_gcd"
brain-progression = "brain_games.scripts.brain_games:game_progression"
brain-prime = "brain_games.scripts.brain_games:game_prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
